<resources>
    <string name="app_name">PsychoHelp</string>
    <string name="sent">Sent</string>
    <string name="name_patient_placeholder">Name</string>
    <string name="email_placeholder">Email</string>
    <string name="cover">Patient</string>
    <string name="session_history">Historial de Sesiones</string>
    <string name="identification_data">Datos de identificación</string>
    <string name="session_placeholder">Sesión</string>
    <string name="motive_placeholder">Motivo de la cita:</string>
    <string name="history_placeholder">Historial Personal:</string>
    <string name="motive"> </string>
    <string name="history"> </string>
    <string name="motive_text">Motive</string>
    <string name="history_text">History</string>
    <string name="placeholder_patient">Text:</string>
    <string name="update_button">Editar</string>
    <string name="open_dialog">Editar</string>
    <string name="patients_list">Tus Pacientes</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_graph_login">nav_graph_login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>