<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPatient"
        app:cardCornerRadius="16dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="7dp"
        android:clickable="true"
        android:focusable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="400dp"
                android:maxWidth="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/person"
                android:contentDescription="@string/cover"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView"/>
            <TextView
                android:id="@+id/tvNamePatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name_patient_placeholder"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:lines="2"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvEmailPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_placeholder"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:lines="1" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>