<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp">

    <EditText
        android:id="@+id/etMotive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="Name"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMotiveDialog"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMotiveDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="44dp"
        android:text="@string/motive_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/etMotive"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="Name"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvHistoryDialog"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvHistoryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="36dp"
        android:text="@string/history_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/etHistory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMotiveDialog" />

    <Button
        android:id="@+id/btDialogEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:text="@string/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>